<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_package</name>
  <version>1.0.0</version>
  <description>Package providing common functionality for other nodes</description>
  <maintainer email="phg6386@thi.de">philipp</maintainer>
  <license>MIT</license>
  <url>https://github.com/THI-Drone/common_package</url>
  <author email="job8197@thi.de">Johan</author>
  <author email="pgh6386@thi.de">philipp</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
